--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@react-router/node": "^7.1.5",
-    "@react-router/serve": "^7.1.5",
+    "@prisma/client": "^6.4.0",
+    "@react-router/dev": "^7.2.0",
+    "@react-router/node": "^7.2.0",
+    "@react-router/serve": "^7.2.0",
+    "@trigger.dev/sdk": "^3.3.16",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.5"
+    "react-router": "^7.2.0"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.1.5",
+    "@react-router/remix-routes-option-adapter": "^7.2.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@trigger.dev/build": "^3.3.16",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "prisma": "^6.4.0",
     "react-router-devtools": "^1.1.0",
+    "remix-flat-routes": "^0.8.5",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
