--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,41 @@
+# Environment
+.env
+.env.*
+!.env.example
+
+# Database
+*.db
+*.db-journal
+*.sqlite
+*.sqlite3
+
+# Prisma
+/prisma/*.db
+
+
+# Development
+.vscode/
+.idea/
+*.log
 .DS_Store
+
+# Build outputs
+/dist/
+/build/
+/.next/
+
+# Dependencies
 /node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Trigger.dev
+.trigger/
+
+# Testing
+/coverage/
+.nyc_output/
 
 # React Router
 /.react-router/
-/build/
-
-.trigger
-
-.env
