feat: Consolidate sync tasks into one and implement transform task
- Refactor sync tasks into a unified `syncAllJson` approach and deprecate the individual tasks from sync-tasks
- Update Prisma schema with refined table structures
- Implement tranform-all task to transform the json data and insert them into relational tables
- Update orchestrator to use new sync strategy

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^6.4.0",
     "@react-router/dev": "^7.2.0",
     "@react-router/node": "^7.2.0",
