--- a/package.json
+++ b/package.json
@@ -6,7 +6,21 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "prepare": "husky"
+  },
+  "prettier": {},
+  "eslintIgnore": [
+    "/node_modules",
+    "/build",
+    "/public/build",
+    "/postgres-data"
+  ],
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,md}": "eslint --fix"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
@@ -15,7 +29,9 @@
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
     "@trigger.dev/sdk": "^3.3.16",
+    "eslint-plugin-markdown": "^3.0.1",
     "isbot": "^5.1.17",
+    "prettier": "^3.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0"
@@ -27,9 +43,24 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "glob": "^11.0.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^6.4.0",
     "react-router-devtools": "^1.1.0",
     "remix-flat-routes": "^0.8.5",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
