--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "",
+  "name": "nowrepgreen-e197",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "build": "cross-env NODE_ENV=production dotenv -e .env.production -- react-router build",
+    "dev": "cross-env DEBUG=false NODE_ENV=development react-router dev",
+    "dev:test": "cross-env DEBUG=false NODE_ENV=test dotenv -e .env.test -- react-router dev",
+    "dev:debug": "cross-env  NODE_ENV=development react-router dev",
+    "start": "cross-env DEBUG=false NODE_ENV=production dotenv -e .env.production -- react-router-serve ./build/server/index.js",
+    "start:debug": "cross-env NODE_ENV=production dotenv -e .env.production -- react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest",
+    "test:dev": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --run",
+    "test:prod": "cross-env NODE_ENV=production vitest --run",
+    "test:coverage": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --coverage",
+    "test:i": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest run --config ./vitest.config.integration.ts",
+    "test:i:watch": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --config ./vitest.config.integration.ts",
+    "test:i:ui": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --config ./vitest.config.integration.ts --ui --api 9527",
+    "test:i:coverage": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest run --config ./vitest.config.integration.ts --coverage",
+    "prisma:dev": "cross-env NODE_ENV=development prisma db push",
+    "prisma:test": "cross-env NODE_ENV=test prisma db push",
+    "prisma:prod": "cross-env NODE_ENV=production dotenv -e .env.production -- prisma db push"
   },
   "prettier": {},
   "eslintIgnore": [
@@ -29,6 +43,8 @@
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
     "@trigger.dev/sdk": "^3.3.16",
+    "@vitest/coverage-v8": "^3.0.6",
+    "@vitest/ui": "^3.0.6",
     "eslint-plugin-markdown": "^3.0.1",
     "isbot": "^5.1.17",
     "prettier": "^3.5.2",
@@ -39,13 +55,19 @@
   "devDependencies": {
     "@react-router/remix-routes-option-adapter": "^7.2.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@trigger.dev/build": "^3.3.16",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -55,7 +77,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "glob": "^11.0.1",
     "husky": "^9.1.7",
+    "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
+    "msw": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^6.4.0",
     "react-router-devtools": "^1.1.0",
@@ -64,6 +88,7 @@
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.6"
   }
 }
