chore: added shadcn/ui, added backend functions for portfolio site, integrated tailwind CSS, added libraries for images

--- a/package.json
+++ b/package.json
@@ -39,18 +39,31 @@
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^6.4.0",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-router/dev": "^7.2.0",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
+    "@tailwindcss/postcss": "^4.0.8",
     "@trigger.dev/sdk": "^3.3.16",
     "@vitest/coverage-v8": "^3.0.6",
     "@vitest/ui": "^3.0.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint-plugin-markdown": "^3.0.1",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.475.0",
     "prettier": "^3.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0"
+    "react-grid-gallery": "^1.0.1",
+    "react-router": "^7.2.0",
+    "remix-themes": "^2.0.4",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
     "@react-router/remix-routes-option-adapter": "^7.2.0",
@@ -65,7 +78,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^8.0.0",
     "eslint": "^8.57.1",
@@ -80,12 +93,13 @@
     "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
     "msw": "^2.7.1",
+    "postcss": "^8.5.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^6.4.0",
     "react-router-devtools": "^1.1.0",
     "remix-flat-routes": "^0.8.5",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.0.8",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4",
