--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
   lint:
     name: ESLint
     runs-on: ubuntu-latest
+    environment: nowrepgreen-e197-staging
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -38,6 +39,7 @@ jobs:
   typecheck:
     name: TypeScript typecheck
     runs-on: ubuntu-latest
+    environment: nowrepgreen-e197-staging
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -65,6 +67,7 @@ jobs:
   unit-tests:
     name: Unit Tests (Vitest)
     runs-on: ubuntu-latest
+    environment: nowrepgreen-e197-staging
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -92,6 +95,7 @@ jobs:
   integration-tests:
     name: Integration Tests (Vitest)
     runs-on: ubuntu-latest
+    environment: nowrepgreen-e197-staging
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
