--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,8 +110,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Debug environment variables
+        run: |
+          echo "TARGET_API_URL exists: ${{ secrets.TARGET_API_URL != '' }}"
+          echo "All environment variables:"
+          env | grep -v -E "^(PATH|HOME|GITHUB_|RUNNER_|ACTIONS_|LEIN_|JAVA_|SELENIUM_|CHROMEDRIVER_|DISPLAY)"
+
       - name: Run tests
-        run: npm run test:i -- --coverage
+        run: npm run test:i
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           TRIGGER_API_KEY: ${{ secrets.TRIGGER_API_KEY }}
