--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "test:dev": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --run",
     "test:prod": "cross-env NODE_ENV=production vitest --run",
     "test:coverage": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --coverage",
-    "test:i": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest run --config ./vitest.config.integration.ts",
-    "test:i:watch": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --config ./vitest.config.integration.ts",
-    "test:i:ui": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --config ./vitest.config.integration.ts --ui --api 9527",
-    "test:i:coverage": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest run --config ./vitest.config.integration.ts --coverage",
+    "test:i": "cross-env NODE_ENV=test dotenv -e .env.test  -- vitest run --config ./vitest.config.integration.ts",
+    "test:i:ci": "cross-env NODE_ENV=test vitest run --config ./vitest.config.integration.ts",
+    "test:i:watch": "cross-env NODE_ENV=test dotenv -e .env.test  -- vitest --config ./vitest.config.integration.ts",
+    "test:i:ui": "cross-env NODE_ENV=test dotenv -e .env.test  -- vitest --config ./vitest.config.integration.ts --ui --api 9527",
+    "test:i:coverage": "cross-env NODE_ENV=test dotenv -e .env.test  -- vitest run --config ./vitest.config.integration.ts --coverage",
     "prisma:dev": "cross-env NODE_ENV=development dotenv -e .env.development -- prisma db push",
     "prisma:test": "cross-env NODE_ENV=test dotenv -e .env.test -- prisma db push",
     "prisma:prod": "cross-env NODE_ENV=production dotenv -e .env.production -- prisma db push",
