--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -137,7 +137,10 @@ jobs:
             // In CI, use hardcoded values
             process.env.TARGET_API_URL = 'https://nowrepgreen-e197-staging.fly.dev';
             process.env.SOURCE_API_URL = 'https://nowrepblue-e197-staging.fly.dev';
-            // Add other variables as needed
+
+            // Set DATABASE_URL for Prisma in CI
+            process.env.DATABASE_URL = 'file::memory:?cache=shared';
+
             console.log('Using hardcoded URLs for CI environment');
           } else {
             // In local development, check for environment variables
@@ -156,7 +159,7 @@ jobs:
       - name: Run tests
         run: npm run test:i:ci
         env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DATABASE_URL: "file::memory:?cache=shared"
           TRIGGER_API_KEY: ${{ secrets.TRIGGER_API_KEY }}
           TRIGGER_SECRET_KEY: ${{ secrets.TRIGGER_SECRET_KEY }}
           SYNC_SECRET_KEY: ${{ secrets.SYNC_SECRET_KEY }}
