--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -156,6 +156,34 @@ jobs:
           echo "Modified test/setup-integration-env.ts:"
           cat test/setup-integration-env.ts
 
+      - name: Create test database schema
+        run: |
+          # Create a script to run migrations on the in-memory database
+          cat > setup-test-db.js << 'EOF'
+          const { execSync } = require('child_process');
+
+          // Set the DATABASE_URL for the in-memory database
+          process.env.DATABASE_URL = 'file::memory:?cache=shared';
+
+          console.log('Running Prisma migrations on in-memory database...');
+
+          try {
+            // Generate Prisma client with the current schema
+            execSync('npx prisma generate', { stdio: 'inherit' });
+
+            // Push the schema to the in-memory database (creates all tables)
+            execSync('npx prisma db push --force-reset', { stdio: 'inherit' });
+
+            console.log('Database schema created successfully');
+          } catch (error) {
+            console.error('Error setting up test database:', error);
+            process.exit(1);
+          }
+          EOF
+
+          # Run the script to set up the database
+          node setup-test-db.js
+
       - name: Run tests
         run: npm run test:i:ci
         env:
