chore(deploy): Update database setup script to use ES module import
- Switch from `require` to `import` for `child_process` module
- Ensure compatibility with ES module syntax in test database setup script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -160,7 +160,7 @@ jobs:
         run: |
           # Create a script to run migrations on the in-memory database
           cat > setup-test-db.js << 'EOF'
-          const { execSync } = require('child_process');
+          import { execSync } from 'child_process';
 
           // Set the DATABASE_URL for the in-memory database
           process.env.DATABASE_URL = 'file::memory:?cache=shared';
