--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -198,10 +198,12 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        env:
+          HUSKY: 0
 
       - name: Deploy Dev Branch
         if: ${{ github.ref == 'refs/heads/dev' }}
-        run: flyctl deploy --remote-only --build-arg COMMIT_SHA=${{ github.sha }} --app ${{ steps.app-name.outputs.value }}-staging
+        run: flyctl deploy --remote-only --build-arg COMMIT_SHA=${{ github.sha }} --build-arg HUSKY=0 --app ${{ steps.app-name.outputs.value }}-staging
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
