chore(deploy): Enhance Prisma engine configuration in GitHub Actions
- Create additional directories for Prisma engine management
- Improve query engine path handling and copying process
- Ensure consistent Prisma client generation in CI environment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -232,10 +232,15 @@ jobs:
         run: |
           # Install Prisma engines globally (make sure version matches your Prisma version)
           npm install -g @prisma/engines@6.4.0
+
+          # Create necessary directories
+          sudo mkdir -p /tmp/prisma-engines
+          mkdir -p .prisma/client
+
           # Find and copy the query engine to locations Prisma searches for it
           sudo cp $(find /usr/local/lib/node_modules/@prisma/engines -name "libquery_engine-debian-openssl-3.0.x.so.node") /tmp/prisma-engines/
-          mkdir -p .prisma/client
           cp $(find /usr/local/lib/node_modules/@prisma/engines -name "libquery_engine-debian-openssl-3.0.x.so.node") .prisma/client/
+
           # Generate Prisma client with the correct binary platform before deploying
           npx prisma generate
           npx trigger.dev@latest deploy
