--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -227,5 +227,6 @@ jobs:
         if: ${{ github.ref == 'refs/heads/dev' }}
         env:
           TRIGGER_ACCESS_TOKEN: ${{ secrets.TRIGGER_ACCESS_TOKEN }}
+          SYNC_SECRET_KEY: ${{ secrets.SYNC_SECRET_KEY }}
         run: |
           npx run trigger:deploy
