refactor(sync): Migrate to API-driven data synchronization architecture
- Completely refactor sync process to use API endpoints instead of direct database access
- Remove deprecated trigger.dev tasks and integration tests
- Update README and documentation to reflect new API-driven sync approach
- Improve task status and monitoring capabilities
- Enhance security with more robust secret key validation
- Simplify trigger configuration and task management
- Ran format on the whole project

--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "start": "react-router-serve ./build/server/index.js",
     "start:debug": "cross-env NODE_ENV=production dotenv -e .env.production -- react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint . --quiet",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "prepare": "husky",
     "postinstall": "node -e \"const fs=require('fs'); if(fs.existsSync('./prisma/schema.prisma')) { require('child_process').execSync('prisma generate', {stdio: 'inherit'}) }\"",
-    "test": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest",
+    "test": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --run",
+    "test:watch": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest",
     "test:dev": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --run",
     "test:prod": "cross-env NODE_ENV=production vitest --run",
     "test:coverage": "cross-env NODE_ENV=test dotenv -e .env.test -- vitest --coverage",
