--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm run lint
 
   typecheck:
-    name: TypeScript typecheck
+    name: TS Typecheck
     runs-on: ubuntu-latest
     environment: nowrepgreen-e197-staging
     steps:
@@ -111,52 +111,6 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
-      - name: Debug environment variables
-        run: |
-          echo "TARGET_API_URL exists: ${{ secrets.TARGET_API_URL != '' }}"
-          echo "All environment variables:"
-          env | grep -v -E "^(PATH|HOME|GITHUB_|RUNNER_|ACTIONS_|LEIN_|JAVA_|SELENIUM_|CHROMEDRIVER_|DISPLAY)"
-
-      - name: Modify test setup for CI
-        run: |
-          # Create a backup of the original file
-          cp test/setup-integration-env.ts test/setup-integration-env.ts.bak
-
-          # Replace the file with a version that uses hardcoded values in CI
-          cat > test/setup-integration-env.ts << 'EOF'
-          // CI-friendly version with hardcoded values
-          const requiredEnvVars = [
-            'TARGET_API_URL',
-            'SOURCE_API_URL',
-            // Add other required vars here
-          ];
-
-          // Check if we're in CI environment
-          const isCI = process.env.CI === 'true';
-
-          if (isCI) {
-            // In CI, use hardcoded values
-            process.env.TARGET_API_URL = 'https://nowrepgreen-e197-staging.fly.dev';
-            process.env.SOURCE_API_URL = 'https://nowrepblue-e197-staging.fly.dev';
-
-            // Set DATABASE_URL for Prisma in CI
-            process.env.DATABASE_URL = 'file::memory:?cache=shared';
-
-            console.log('Using hardcoded URLs for CI environment');
-          } else {
-            // In local development, check for environment variables
-            for (const envVar of requiredEnvVars) {
-              if (!process.env[envVar]) {
-                throw new Error(`Required environment variable ${envVar} is not set`);
-              }
-            }
-          }
-          EOF
-
-          # Show the modified file
-          echo "Modified test/setup-integration-env.ts:"
-          cat test/setup-integration-env.ts
 
       - name: Run tests
         run: npm run test:i:ci
