chore(deploy): Make integration tests optional in CI workflow. I forgot to do that in the previous commit.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,8 +96,8 @@ jobs:
     name: Integration Tests (Vitest)
     runs-on: ubuntu-latest
     environment: nowrepgreen-e197-staging
-    # Skip this job entirely for now
-    if: false
+    # Mark as continue-on-error to make it optional
+    continue-on-error: true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
