--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,6 +115,7 @@ jobs:
       - name: Run tests
         run: npm run test:i:ci
         env:
+          CI: true
           DATABASE_URL: "file::memory:?cache=shared"
           TRIGGER_API_KEY: ${{ secrets.TRIGGER_API_KEY }}
           TRIGGER_SECRET_KEY: ${{ secrets.TRIGGER_SECRET_KEY }}
