--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@prisma/client": "^6.4.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-router/dev": "^7.2.0",
@@ -55,6 +56,7 @@
     "@trigger.dev/sdk": "^3.3.16",
     "@vitest/coverage-v8": "^3.0.6",
     "@vitest/ui": "^3.0.6",
+    "@xyflow/react": "^12.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-markdown": "^3.0.1",
