--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-markdown": "^3.0.1",
     "isbot": "^5.1.17",
     "lucide-react": "^0.475.0",
+    "mermaid": "^11.4.1",
     "prettier": "^3.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
